plugins {
	id 'fabric-loom' version "${loom_version}"
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Loom adds Minecraft / Fabric maven repos automatically.
	// Add extra repos here only if you depend on other mods.
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// NanoVG for smooth, anti-aliased vector UI (matches MC 1.21.4's LWJGL 3.3.3).
	// The binding compiles against MC's bundled LWJGL core; only nanovg classes +
	// native are added and shipped via Jar-in-Jar so the production mod is self-contained.
	include(implementation("org.lwjgl:lwjgl-nanovg:3.3.3"))
	include(runtimeOnly("org.lwjgl:lwjgl-nanovg:3.3.3:natives-windows"))
}

processResources {
	inputs.property "version", project.version
	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
}

java {
	withSourcesJar()
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}" }
	}
}
